--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -5,7 +5,7 @@
 # This workflow will install Python dependencies, run tests and lint with a variety of Python versions
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Python tests
+name: Tests
 
 on:
   push:
@@ -48,7 +48,6 @@ jobs:
 
   tests:
     runs-on: ${{ matrix.os }}
-    # needs: "mypy"
     strategy:
       fail-fast: false
       matrix:
@@ -64,10 +63,10 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip setuptools_scm[toml] wheel setuptools
-        python -m pip install flake8 tox mypy
-    - name: Test with tox/pytest
+        python -m pip install --upgrade .[testing]
+    - name: Test with pytest
       run: |
-        tox -- -k 'not test_real'
+        python -m pytest --cov --cov-report=xml
     - name: "Upload coverage to Codecov"
       uses: codecov/codecov-action@v1
       with:
