--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -41,6 +41,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip setuptools_scm[toml] wheel setuptools
           python -m pip install --upgrade attrs types-attrs
+          python -m pip install --upgrade .
           python -m pip install flake8 tox mypy
       - name: Mypy
         run: |
