--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,2 @@
-[tool.mypy]
-#python_version = "3.10"
-# warn_return_any = true
-warn_unused_configs = true
-ignore_missing_imports = true
+[build-system]
+requires = ["setuptools>=42", "wheel"]
