--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,19 +3,16 @@ name = "stickydesign-accel"
 version = "0.9.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [lib]
 name = "stickydesign_accel"
 path = "src/lib.rs"
 crate-type = ["cdylib"]
 
 [features]
-use_rayon = ["rayon"]
+rayon = ["ndarray/rayon"]
 
 [dependencies]
-rayon = { version = "1", optional = true }
 ndarray = {version = "0.15", features = ["approx", "blas", "serde"]}
-numpy = {version = "0.17"}
-pyo3 = {version = "0.17", features = ["extension-module"]}
+numpy = {version = "0.20"}
+pyo3 = {version = "0.20", features = ["extension-module"]}
 
