--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = stickydesign
-version = 0.9.0.a1
+version = 0.9.0.a2
 author = Constantine Evans
 author_email = const@costi.eu
 description = StickyDesign DNA Tile Sticky End Package
@@ -20,11 +20,11 @@ packages =
     stickydesign
     stickydesign.stickydesign2
 install_requires =
-    numpy
+    numpy ~= 1.20
 
 [options.extras_require]
 accel =
-    stickydesign-accel ~= 0.9.0.a1
+    stickydesign-accel == 0.9.0.a2
 testing = 
     pytest-cov
     pytest-benchmark
