--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -64,7 +64,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip setuptools_scm[toml] wheel setuptools
-        python -m pip install --upgrade .[testing]
+        python -m pip install --upgrade .[tests]
     - name: Test with pytest
       run: |
         python -m pytest --cov --cov-report=xml
