--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ warn_unused_configs = true
 ignore_missing_imports = true
 
 [tool.pytest.ini_options]
-addopts = "--cov stickydesign --cov-report term-missing --verbose"
+addopts = "--cov src/stickydesign --cov-report term-missing --verbose"
 norecursedirs = ["dist", "build", ".tox"]
 testpaths = ["tests"]
 
@@ -42,10 +42,48 @@ where = ["src"]
 
 [project.optional-dependencies]
 accel = ["stickydesign-accel == 0.9.0.a2"]
-testing = ["pytest-cov", "pytest-benchmark", "pytest"]
+tests = ["pytest-cov", "pytest-benchmark", "pytest"]
 
 
 # packages = ["stickydesign", "stickydesign.stickydesign2"]
 
 #[options.package_data]
 #stickydesign = ["params/dnastackingbig.csv"]
+
+
+[tool.ruff]
+target-version = "py312"
+
+# Same as Black.
+line-length = 88
+indent-width = 4
+
+[tool.ruff.lint]
+
+fixable = ["ALL"]
+select = ["E4", "E7", "E9", "F", "B", "A001", "A002", "C4", "ICN", "PIE", "PYI", "RSE",
+    "RET501", "SIM", "TID", "TCH", "INT", "PTH", "PD", "PLR", "PLW", "TRY",
+    "NPY", "PERF", "FURB", "RUF", "UP", "D"]
+
+# 2. Avoid enforcing line-length violations (`E501`)
+ignore = ["E501", "TRY003", "D1", "UP007"]
+
+# 3. Avoid trying to fix flake8-bugbear (`B`) violations.
+unfixable = ["B"]
+
+[tool.ruff.lint.pydocstyle]
+convention = "numpy"
+
+
+[tool.ruff.format]
+# Like Black, use double quotes for strings.
+quote-style = "double"
+
+# Like Black, indent with spaces, rather than tabs.
+indent-style = "space"
+
+# Like Black, respect magic trailing commas.
+skip-magic-trailing-comma = false
+
+# Like Black, automatically detect the appropriate line ending.
+line-ending = "auto"
