--- a/accel/Cargo.toml
+++ b/accel/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "stickydesign-accel"
-version = "0.9.0"
+version = "0.9.1"
 edition = "2021"
 
 [lib]
@@ -13,6 +13,6 @@ rayon = ["ndarray/rayon"]
 
 [dependencies]
 ndarray = {version = "0.15", features = ["approx", "blas", "serde"]}
-numpy = {version = "0.20"}
-pyo3 = {version = "0.20", features = ["extension-module"]}
+numpy = {version = "0.21"}
+pyo3 = {version = "0.21", features = ["extension-module", "experimental-declarative-modules"]}
 
