--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,7 +66,7 @@ select = ["E4", "E7", "E9", "F", "B", "A001", "A002", "C4", "ICN", "PIE", "PYI",
     "NPY", "PERF", "FURB", "RUF", "UP", "D"]
 
 # 2. Avoid enforcing line-length violations (`E501`)
-ignore = ["E501", "TRY003", "D1", "UP007"]
+ignore = ["E501", "TRY003", "D1", "UP007", "D205", "D401", "UP032", "UP", "PLR0913", "PLR2004", "PLR0912"]
 
 # 3. Avoid trying to fix flake8-bugbear (`B`) violations.
 unfixable = ["B"]
