--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ version = "0.9.1"
 authors = [{ name = "Constantine Evans", email = "const@costi.net" }]
 description = "StickyDesign DNA Tile Sticky End Package"
 readme = "README.md"
-dependencies = ["numpy ~= 1.20", "typing_extensions~=4.0"]
+dependencies = ["numpy >= 1.20, < 3.0", "typing_extensions~=4.0"]
 
 [project.urls]
 homepage = "https://dna.caltech.edu/StickyDesign"
