--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -29,23 +29,23 @@ jobs:
   #          options: "--check --verbose --diff"
   #          src: "./src"
 
-  mypy:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.12"
-      - uses: actions/checkout@v3
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip setuptools_scm[toml] wheel setuptools
-          python -m pip install --upgrade attrs types-attrs
-          python -m pip install --upgrade .
-          python -m pip install flake8 tox mypy
-      - name: Mypy
-        run: |
-          mypy --cache-dir .mypy_cache --install-types --non-interactive ./src
+  # mypy:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Set up Python ${{ matrix.python-version }}
+  #       uses: actions/setup-python@v4
+  #       with:
+  #         python-version: "3.12"
+  #     - uses: actions/checkout@v3
+  #     - name: Install dependencies
+  #       run: |
+  #         python -m pip install --upgrade pip setuptools_scm[toml] wheel setuptools
+  #         python -m pip install --upgrade attrs types-attrs
+  #         python -m pip install --upgrade .
+  #         python -m pip install flake8 tox mypy
+  #     - name: Mypy
+  #       run: |
+  #         mypy --cache-dir .mypy_cache --install-types --non-interactive ./src
 
   tests:
     runs-on: ${{ matrix.os }}
@@ -53,7 +53,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        python-version: ["3.9", "3.10", "3.11", "3.12"]
+        python-version: ["3.9", "3.10", "3.11", "3.12", "3.13"]
 
     steps:
     - uses: actions/checkout@v3
